modify requirements and jc_requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-static==0.0.6
 django-toolbelt==0.0.1
 gunicorn==19.1.1
 psycopg2==2.5.4
+python-memcached==1.53
 static3==0.5.1
 tabulate==0.7.3
 wsgiref==0.1.2
