--- a/swappy/src/swap/requirements.txt
+++ b/swappy/src/swap/requirements.txt
@@ -1,18 +1,13 @@
 Django==1.7
 argparse==1.2.1
+beautifulsoup4==4.3.2
 cx-Oracle==5.1.3
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-toolbelt==0.0.1
+djangorestframework==2.4.3
 gunicorn==19.1.1
-oauthlib==0.6.3
 psycopg2==2.5.4
-python-memcached==1.53
-requests==2.1.0
-requests-oauthlib==0.4.0
+requests==2.4.3
 static3==0.5.1
-tabulate==0.7.3
-tweepy==2.3.0
-twitter==1.15.0
-twython==3.1.2
 wsgiref==0.1.2
