--- a/swappy/src/swap/requirements.txt
+++ b/swappy/src/swap/requirements.txt
@@ -7,12 +7,21 @@ dj-static==0.0.6
 django-toolbelt==0.0.1
 djangorestframework==2.4.3
 gunicorn==19.1.1
+matplotlib==1.4.2
+mock==1.0.1
+nose==1.3.4
+numpy==1.9.1
 oauthlib==0.6.3
+plotly==1.4.2
 psycopg2==2.5.4
 pygal==1.5.1
+pyparsing==2.0.3
+python-dateutil==2.2
 python-memcached==1.53
+pytz==2014.9
 requests==2.1.0
 requests-oauthlib==0.4.0
+six==1.8.0
 static3==0.5.1
 tabulate==0.7.3
 termcolor==1.1.0
